--- a/FitnessTracker.V1/Pages/CreateProgramme.razor
+++ b/FitnessTracker.V1/Pages/CreateProgramme.razor
@@ -1,7 +1,7 @@
 ﻿@page "/create-programme"
 @inject HttpClient Http
 @inject ILocalStorageService LocalStorage
-@inject SupabaseService SupabaseService
+@inject SupabaseService2 SupabaseService
 @inject NavigationManager Nav
 @using static FitnessTracker.V1.Models.Model
 @using System.Text.Json
