--- a/FitnessTracker.V1/Pages/Exercices.razor
+++ b/FitnessTracker.V1/Pages/Exercices.razor
@@ -3,7 +3,7 @@
 @using FitnessTracker.V1.Services
 
 @inject PoidsService PoidsService
-@inject SupabaseService SupabaseService
+@inject SupabaseService2 SupabaseService
 
 <h3>Exercices</h3>
 
