--- a/FitnessTracker.V1/Pages/GenerateProgramme.razor
+++ b/FitnessTracker.V1/Pages/GenerateProgramme.razor
@@ -3,7 +3,7 @@
 
 @inject ProgrammeGeneratorService Generator
 @inject HttpClient Http
-@inject SupabaseService SupabaseService
+@inject SupabaseService2 SupabaseService
 @inject NavigationManager Nav
 @inject AuthService AuthService
 @inject Supabase.Client Supabase
