--- a/FitnessTracker.V1/Pages/GestionPoids.razor
+++ b/FitnessTracker.V1/Pages/GestionPoids.razor
@@ -2,7 +2,7 @@
 @using FitnessTracker.V1.Models
 @using FitnessTracker.V1.Services
 @inject PoidsService PoidsService
-@inject SupabaseService SupabaseService
+@inject SupabaseService2 SupabaseService
 
 
 <div class="container mt-4">
