--- a/FitnessTracker.V1/Pages/Programme.razor
+++ b/FitnessTracker.V1/Pages/Programme.razor
@@ -1,5 +1,5 @@
 ﻿@page "/programme"
-@inject SupabaseService SupabaseService
+@inject SupabaseService2 SupabaseService
 @using FitnessTracker.V1.Models
 
 <h3>Créer un programme de musculation</h3>
