--- a/FitnessTracker.V1/Pages/Logout.razor
+++ b/FitnessTracker.V1/Pages/Logout.razor
@@ -1,7 +1,7 @@
 ﻿@page "/logout"
 
 @inject AuthService AuthService
-@inject SupabaseService SupabaseService
+@inject SupabaseService2 SupabaseService
 @inject NavigationManager Nav
 
 @code {
