--- a/FitnessTracker.V1/Pages/MonProfil.razor
+++ b/FitnessTracker.V1/Pages/MonProfil.razor
@@ -23,7 +23,14 @@ else
                 <label class="form-label">Âge</label>
                 <InputNumber class="form-control" @bind-Value="profile.Age" />
             </div>
-
+            <div class="col-md-6 mb-3">
+                <label class="form-label">Sexe</label>
+                <InputSelect class="form-select" @bind-Value="profile.Sexe">
+                    <option value="Homme">Homme</option>
+                    <option value="Femme">Femme</option>
+                    <option value="Autre">Autre</option>
+                </InputSelect>
+            </div>
             <div class="col-md-6 mb-3">
                 <label class="form-label">Niveau</label>
                 <InputSelect class="form-select" @bind-Value="profile.Level">
