--- a/FitnessTracker.V1/Pages/ViewSession.razor
+++ b/FitnessTracker.V1/Pages/ViewSession.razor
@@ -4,7 +4,7 @@
 @using FitnessTracker.V1.Services.ProgrammeGeneration
 @using System.Text.Json
 @using static FitnessTracker.V1.Models.Model
-@inject SupabaseService SupabaseService
+@inject SupabaseService2 SupabaseService
 @inject PoidsService PoidsService
 @inject IJSRuntime JS
 @inject NavigationManager Nav
