correction yml, rajoute de appsetting.production.json

--- a/FitnessTracker.V1/Layout/MainLayout.razor
+++ b/FitnessTracker.V1/Layout/MainLayout.razor
@@ -80,6 +80,9 @@
             <NavLink href="/mon-profil" class="bottom-item">
                 <i class="bi bi-person fs-5"></i><span class="small">Profil</span>
             </NavLink>
+            <NavLink href="/create-programme" class="bottom-item">
+                <i class="bi bi-person fs-5"></i><span class="small">Create</span>
+            </NavLink>
         </nav>
     }
 </div>
