--- a/FitnessTracker.V1/Layout/NavMenu.razor
+++ b/FitnessTracker.V1/Layout/NavMenu.razor
@@ -6,7 +6,7 @@
     <!-- HOME -->
     <div class="nav-item px-3">
         <NavLink class="nav-link text-dark" href="" Match="NavLinkMatch.All">
-            <i class="bi bi-house"></i> Home
+            <i class="bi bi-house"></i> Salut
         </NavLink>
     </div>
 
